group 'com.tester.hjx'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    //testCompile group: 'junit', name: 'junit', version: '4.12'
    // https://mvnrepository.com/artifact/org.testng/testng
    testCompile group: 'org.testng', name: 'testng', version: '7.0.0-beta3'
    // https://mvnrepository.com/artifact/io.appium/java-client
    compile group: 'io.appium', name: 'java-client', version: '7.0.0'
    // https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin
    compile group: 'org.apache.maven.plugins', name: 'maven-surefire-plugin', version: '2.22.1'
    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
    compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
}